src/tests/fixtures/extend_interface/addStringFieldToInterface.ts.expected
-----------------
INPUT
----------------- 
/** @gqlInterface */
interface IPerson {
  name: string;
  /** @gqlField */
  hello: string;
}

/** @gqlField */
export function greeting(person: IPerson): string {
  return `Hello ${person.name}!`;
}

/** @gqlType */
class User implements IPerson {
  __typename: "User";
  name: string;
  /** @gqlField */
  hello: string;
}

/** @gqlType */
class Admin implements IPerson {
  __typename: "Admin";
  name: string;
  /** @gqlField */
  hello: string;
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/extend_interface/addStringFieldToInterface.ts:9:1 - error: Interface field IPerson.greeting expected but Admin does not provide it.

 9 export function greeting(person: IPerson): string {
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
10   return `Hello ${person.name}!`;
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
11 }
   ~

  src/tests/fixtures/extend_interface/addStringFieldToInterface.ts:22:1
     22 class Admin implements IPerson {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     23   __typename: "Admin";
        ~~~~~~~~~~~~~~~~~~~~~~
    ... 
     26   hello: string;
        ~~~~~~~~~~~~~~~~
     27 }
        ~
    Related location
src/tests/fixtures/extend_interface/addStringFieldToInterface.ts:9:1 - error: Interface field IPerson.greeting expected but User does not provide it.

 9 export function greeting(person: IPerson): string {
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
10   return `Hello ${person.name}!`;
   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
11 }
   ~

  src/tests/fixtures/extend_interface/addStringFieldToInterface.ts:14:1
     14 class User implements IPerson {
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     15   __typename: "User";
        ~~~~~~~~~~~~~~~~~~~~~
    ... 
     18   hello: string;
        ~~~~~~~~~~~~~~~~
     19 }
        ~
    Related location
